--- a/tumweb/build.gradle
+++ b/tumweb/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'maven'
 
 sourceCompatibility = 1.7
@@ -44,7 +45,7 @@ dependencies {
 }
 
 sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
+    main.java.srcDirs += ['src/main/kotlin', 'build/generated/source/kapt']
     test.java.srcDirs += 'src/test/kotlin'
 }
 
